--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@react-three/drei": "^9.56.24",
     "@react-three/fiber": "^8.11.0",
     "@react-three/postprocessing": "^2.7.0",
+    "@reduxjs/toolkit": "^1.9.2",
+    "@types/react-redux": "^7.1.25",
     "express": "^4.18.2",
     "gltfjsx": "^6.1.4",
     "maath": "^0.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
+    "react-redux": "^8.0.5",
     "three": "^0.148.0",
     "vite-plugin-svgr": "^2.4.0"
   },
