--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^1.9.2",
     "@types/react-redux": "^7.1.25",
     "express": "^4.18.2",
+    "framer-motion": "^9.0.4",
     "gltfjsx": "^6.1.4",
     "maath": "^0.5.2",
     "react": "^18.2.0",
