--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@react-three/postprocessing": "^2.7.0",
     "@reduxjs/toolkit": "^1.9.2",
     "@types/react-redux": "^7.1.25",
+    "events": "^3.3.0",
     "express": "^4.18.2",
     "framer-motion": "^9.0.4",
-    "gltfjsx": "^6.1.4",
     "maath": "^0.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
