--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "husky": "^8.0.0",
     "jsdom": "^21.1.0",
     "lint-staged": "^13.1.0",
+    "loadtest": "^5.2.0",
     "postcss": "^8.4.21",
     "postcss-nesting": "^11.1.0",
     "prettier": "^2.8.3",
