--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-redux": "^8.0.5",
-    "three": "^0.148.0",
-    "vite-plugin-svgr": "^2.4.0"
+    "three": "^0.148.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -58,6 +57,8 @@
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-svgr": "^2.4.0",
     "vitest": "^0.28.3"
   },
   "husky": {
