--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,9 @@
 {
+    "singleQuote": true,
     "trailingComma": "all",
     "semi": true,
-    "printWidth": 80,
+    "printWidth": 100,
     "bracketSpacing": true,
-    "endOfLine": "lf"
+    "endOfLine": "lf",
+    "useTabs": false
 }
