--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,8 @@
         "es2021": true
     },
     "globals": {
-        "JSX": true
+        "JSX": true,
+        "process": "readonly"
     },
     "plugins": [
         "import",
