--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "test": "vitest",
-    "dev": "vite --host",
+    "dev": "vite --m .env.local --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "prepare": "husky install"
