--- a/.eslintrc
+++ b/.eslintrc
@@ -50,7 +50,15 @@
     "rules": {
         "react/jsx-uses-react": "off",
         "react/react-in-jsx-scope": "off",
-        "@typescript-eslint/no-unused-vars": "error",
+        "@typescript-eslint/no-unused-vars": [
+            "error",
+            {
+                "vars": "all",
+                "args": "after-used",
+                "ignoreRestSiblings": true,
+                "argsIgnorePattern": "^_$"
+            }
+        ],
         "@typescript-eslint/explicit-function-return-type": "error",
         "import/no-unresolved": "error",
         "jsdoc/require-jsdoc": [
