--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-redux": "^7.1.25",
     "events": "^3.3.0",
     "express": "^4.18.2",
+    "fast-xml-parser": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
