--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "PORT=8089 node server.js",
+    "start": "node server.js",
     "test": "vitest",
     "dev": "vite --m .env.local --host",
     "build": "tsc && vite build",
