--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
+    "start2": "node server.js",
     "test": "vitest",
+    "start": "serve -s dist -p 8080",
     "dev": "vite --m .env.local --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
@@ -19,7 +20,7 @@
     "@types/react-redux": "^7.1.25",
     "events": "^3.3.0",
     "express": "^4.18.2",
-    "fast-xml-parser": "^4.2.2",
+    "fast-xml-parser": "^4  .2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
