--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start2": "node server.js",
+    "old": "node server.js",
     "test": "vitest",
     "start": "serve -s dist -p 8080",
     "dev": "vite --m .env.local --host",
@@ -26,6 +26,7 @@
     "react-draggable": "^4.4.5",
     "react-intl": "^6.4.1",
     "react-redux": "^8.0.5",
+    "serve": "^14.2.0",
     "three": "^0.148.0"
   },
   "devDependencies": {
