--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite --m .env.local --host",
     "build": "tsc && vite build",
-    "start": "serve -s dist -p 8080",
+    "start": "node server.js",
     "test": "vitest",
     "preview": "vite preview",
     "prepare": "husky install"
@@ -18,13 +18,13 @@
     "@reduxjs/toolkit": "^1.9.2",
     "@types/react-redux": "^7.1.25",
     "events": "^3.3.0",
+    "express": "^4.18.2",
     "fast-xml-parser": "^4  .2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-intl": "^6.4.1",
     "react-redux": "^8.0.5",
-    "serve": "^14.2.0",
     "three": "^0.148.0"
   },
   "devDependencies": {
