--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@react-three/fiber": "^8.11.0",
     "@reduxjs/toolkit": "^1.9.2",
     "@types/react-redux": "^7.1.25",
+    "algebra.js": "^0.2.6",
     "events": "^3.3.0",
     "express": "^4.18.2",
     "fast-xml-parser": "^4  .2.2",
+    "mathjs": "^11.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
