--- a/.eslintrc
+++ b/.eslintrc
@@ -85,7 +85,8 @@
               "linewidth",
               "linecap",
               "linejoin",
-              "geometry"
+              "geometry",
+              "quaternion"
             ]
           }
         ]
