--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-three/drei": "^9.56.24",
     "@react-three/fiber": "^8.11.0",
     "@reduxjs/toolkit": "^1.9.2",
+    "@types/jest": "^29.5.1",
     "@types/react-redux": "^7.1.25",
     "events": "^3.3.0",
     "express": "^4.18.2",
@@ -46,6 +47,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.0",
+    "jest": "^29.5.0",
     "jsdom": "^21.1.0",
     "lint-staged": "^13.1.0",
     "postcss": "^8.4.21",
@@ -60,14 +62,13 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged && npx vitest"
     }
   },
   "lint-staged": {
     "**/*.{ts,tsx}": [
       "bash -c tsc",
       "eslint",
-      "vitest related --run",
       "prettier --write"
     ]
   }
