--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc && vite build",
     "start": "node server.js",
     "test": "vitest",
+    "test-coverage": "npx vitest --coverage",
     "preview": "vite preview",
     "prepare": "husky install"
   },
@@ -64,7 +65,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
-      "pre-push": "npx vitest --coverage"
+      "pre-push": "npm test-coverage"
     }
   },
   "lint-staged": {
