--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc && vite build",
     "start": "node server.js",
     "test": "vitest",
+    "test-results": "serve coverage",
     "preview": "vite preview",
     "prepare": "husky install"
   },
@@ -54,6 +55,7 @@
     "postcss": "^8.4.21",
     "postcss-nesting": "^11.1.0",
     "prettier": "^2.8.3",
+    "serve": "^14.2.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
