--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^1.9.2",
     "@types/jest": "^29.5.1",
     "@types/react-redux": "^7.1.25",
+    "compression": "^1.7.4",
     "events": "^3.3.0",
     "express": "^4.18.2",
     "fast-xml-parser": "^4  .2.2",
