--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "start": "node server.js",
     "test": "vitest",
     "coverage": "npx vitest --coverage --run",
