--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
+    "react-intersection-observer": "^9.4.3",
     "react-intl": "^6.4.1",
+    "react-lazy-load": "^4.0.1",
     "react-redux": "^8.0.5",
     "three": "^0.148.0"
   },
