--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-intl": "^6.4.1",
     "react-lazy-load": "^4.0.1",
     "react-redux": "^8.0.5",
+    "react-select": "^5.7.3",
     "three": "^0.148.0"
   },
   "devDependencies": {
