--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "printWidth": 100,
   "bracketSpacing": true,
   "endOfLine": "lf",
-  "tabWidth": 2
+  "tabWidth": 2,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
