--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "lint-staged": "^13.1.0",
     "postcss": "^8.4.21",
     "postcss-nesting": "^11.1.0",
-    "prettier": "^2.8.3",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "serve": "^14.2.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
