--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "@ianvs/prettier-plugin-sort-imports": "^4.0.2",
     "@react-three/cannon": "^6.5.2",
     "@react-three/drei": "^9.56.24",
     "@react-three/fiber": "^8.11.0",
@@ -23,9 +24,11 @@
     "@types/jest": "^29.5.1",
     "@types/react-redux": "^7.1.25",
     "compression": "^1.7.4",
+    "eslint-plugin-prettier": "^4.2.1",
     "events": "^3.3.0",
     "express": "^4.18.2",
     "fast-xml-parser": "^4  .2.2",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
@@ -76,7 +79,6 @@
   "lint-staged": {
     "**/*.{ts,tsx}": [
       "bash -c tsc",
-      "eslint",
       "prettier --write"
     ]
   }
