--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
-  "eslint.workingDirectories": ["./tracer-core-new"],
+  "eslint.workingDirectories": [
+    "./tracer-core-new"
+  ],
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
