--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "events": "^3.3.0",
     "express": "^4.18.2",
     "fast-xml-parser": "^4  .2.2",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -40,6 +42,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@types/file-saver": "^2.0.5",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/three": "^0.149.0",
