--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-media-recorder-2": "^1.6.23",
     "react-redux": "^8.0.5",
     "react-select": "^5.7.3",
+    "tailwind-merge": "^1.13.2",
     "three": "^0.153.0"
   },
   "devDependencies": {
