--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "start": "node server.js",
+    "start": "serve -s dist",
     "test": "vitest",
     "coverage": "npx vitest --coverage --run",
     "show-test-results": "serve coverage",
