--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "start": "serve -s dist",
+    "start": "node server.js",
     "test": "vitest",
     "coverage": "npx vitest --coverage --run",
     "show-test-results": "serve coverage",
@@ -67,7 +67,6 @@
     "postcss-nesting": "^11.1.0",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "serve": "^14.2.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
