--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-three/drei": "^9.56.24",
     "@react-three/fiber": "^8.11.0",
     "@reduxjs/toolkit": "^1.9.2",
+    "@tweenjs/tween.js": "^21.0.0",
     "@types/jest": "^29.5.1",
     "@types/react-redux": "^7.1.25",
     "compression": "^1.7.4",
