--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "private": true,
   "version": "6.0.0",
   "type": "module",
+  "description": "Our Nuclear Engineering Center collaborates with CERN, specializing in 3D modeling and applications. We create immersive 3D models for various CERN teams, visualizing complex concepts. From particle detectors to accelerator designs, our experts bring ideas to life. Through advanced 3D applications, we enhance collaboration and data analysis, supporting particle physics research. Join us at the intersection of nuclear engineering and particle physics, as we drive innovation alongside CERN. Experience the transformative potential of 3D technology in unraveling the mysteries of the universe and shaping the future of scientific exploration.",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
     "start": "serve -s dist -p 8080",
-    "start2": "node server.js",
     "test": "vitest",
     "coverage": "npx vitest --coverage --run",
     "show-test-results": "serve coverage",
@@ -28,7 +28,6 @@
     "compression": "^1.7.4",
     "eslint-plugin-prettier": "^4.2.1",
     "events": "^3.3.0",
-    "express": "^4.18.2",
     "fast-xml-parser": "^4  .2.2",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
