--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "@react-three/fiber": "^8.11.0",
     "@reduxjs/toolkit": "^1.9.2",
     "@tweenjs/tween.js": "^21.0.0",
+    "compression": "^1.7.4",
     "events": "^3.3.0",
+    "express": "^4.18.2",
     "fast-xml-parser": "^4  .2.2",
     "file-saver": "^2.0.5",
-    "finalhandler": "^1.2.0",
     "html2canvas": "^1.4.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
@@ -33,20 +34,18 @@
     "react-media-recorder-2": "^1.6.23",
     "react-redux": "^8.0.5",
     "react-select": "^5.7.3",
-    "serve-static": "^1.15.0",
     "tailwind-merge": "^1.13.2",
     "three": "^0.154.0"
   },
   "devDependencies": {
-    "eslint-plugin-prettier": "^4.2.1",
-    "@types/jest": "^29.5.1",
-    "@types/react-redux": "^7.1.25",
     "@ianvs/prettier-plugin-sort-imports": "^4.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/file-saver": "^2.0.5",
+    "@types/jest": "^29.5.1",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-redux": "^7.1.25",
     "@types/three": "^0.149.0",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
@@ -58,6 +57,7 @@
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.0",
