--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fast-xml-parser": "^4  .2.2",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
+    "leva": "^0.9.35",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
