--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "html2canvas": "^1.4.1",
     "leva": "^0.9.35",
     "path": "^0.12.7",
+    "rc-slider": "^10.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
@@ -47,6 +48,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/react-redux": "^7.1.25",
+    "@types/react-slider": "^1.3.1",
     "@types/three": "^0.149.0",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
