--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
+    "react-hot-toast": "^2.4.1",
     "react-media-recorder-2": "^1.6.23",
     "react-redux": "^8.0.5",
     "react-select": "^5.7.3",
